--- a/Manuel Abreu/Pag/educacion.html
+++ b/Manuel Abreu/Pag/educacion.html
@@ -15,6 +15,7 @@
     <a href="../index.html">Inicio</a>
     <a href="experiencia.html">Experiencia</a>
     <br>
+    <h3>Educación</h3>
     <table border="1px">
       <tr>
         <td><strong>Año</strong></td>
